<package>
  <name>octomap</name>
  <version>1.6.8</version>
  <description>The OctoMap library implements a 3D occupancy grid mapping approach, providing data structures and mapping algorithms in C++. The map implementation is based on an octree. See
  http://octomap.github.io for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="hornunga@informatik.uni-freiburg.de">Armin Hornung</author>
  <maintainer email="hornunga@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>
  
  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
  
</package>
