<package format="3">
  <name>octomap</name>
  <version>1.9.0</version>
  <description>The OctoMap library implements a 3D occupancy grid mapping approach, providing data structures and mapping algorithms in C++. The map implementation is based on an octree. See
  http://octomap.github.io for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <license>BSD</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
