<package format="3">
  <name>octomap</name>
  <version>1.9.7</version>
  <description>The OctoMap library implements a 3D occupancy grid mapping approach, providing data structures and mapping algorithms in C++. The map implementation is based on an octree. See
  http://octomap.github.io for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
