<package format="2">
  <name>octovis</name>
  <version>1.9.1</version>
  <description>octovis is visualization tool for the OctoMap library based on Qt and libQGLViewer. See
  http://octomap.github.io for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <license>GPLv2</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
      
  <depend>octomap</depend>
  <depend>libqglviewer-qt4</depend>
  <depend>libqt4-dev</depend>
  <depend>libqt4-opengl-dev</depend>
  <depend>libqtgui4</depend>
</package>
